@@ -4,6 +4,8 @@ examples/ex2.pl
 examples/ex3.pl
 images/ex3.png
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -21,11 +23,11 @@ META.yml
 README
 share/tbilisi-map.xml
 SIGNATURE
-t/Map-Tube-Tbilisi/00-use.t
-t/Map-Tube-Tbilisi/01-version.t
-t/Map-Tube-Tbilisi/02-pod_coverage.t
-t/Map-Tube-Tbilisi/03-pod.t
-t/Map-Tube-Tbilisi/04-get_shortest_route.t
-t/Map-Tube-Tbilisi/05-name.t
-t/Map-Tube-Tbilisi/06-xml.t
+t/Map-Tube-Tbilisi/01-use.t
+t/Map-Tube-Tbilisi/02-version.t
+t/Map-Tube-Tbilisi/03-get_shortest_route.t
+t/Map-Tube-Tbilisi/04-name.t
+t/Map-Tube-Tbilisi/05-xml.t
 Tbilisi.pm
+xt/Map-Tube-Tbilisi/01-pod_coverage.t
+xt/Map-Tube-Tbilisi/02-pod.t
