@@ -1,5 +1,6 @@
 0.03
  - Add <?xml> header to XML document.
+ - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.16 version.
 
